@@ -1,4 +1,5 @@
 26 Apr 2003 mipsator
+ * added check_include_function in pmkcfg.sh .
  * improved str_to_dynary() and parse_conf_line().
  * pmk_check_include() has been updated to check function again.
 
